--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
   padding-right: 1rem;
 }
 #sideNav .navbar-nav .nav-item .nav-link {
-  font-weight: 800;
+  font-weight: 100;
   letter-spacing: 0.05rem;
   text-transform: lowercase;
 }
@@ -15,6 +15,11 @@
 
 #payChart {
   width: auto;
+}
+
+.form-label {
+  text-align: center;
+  display: block;
 }
 
 .btn-group {
@@ -32,7 +37,7 @@ section.resume-section {
   align-items: start;
   padding-left: 1rem;
   padding-right: 1rem;
-  padding-top: 2rem;
+  padding-top: 1rem;
   padding-bottom: 2rem;
 }
 section.resume-section .resume-section-title {
@@ -206,12 +211,12 @@ body {
   }
   body {
     padding-top: 0;
-    padding-left: 12rem;
+    padding-left: 9rem;
   }
   section.resume-section {
     padding-left: 3rem;
     padding-right: 3rem;
-    padding-top: 5rem;
+    padding-top: 2rem;
     padding-bottom: 5rem;
   }
   .container-lg {
