--- a/style.scss
+++ b/style.scss
@@ -1,25 +1,24 @@
 $color_1: #6c757d;
 $color_2: #fff;
 $background-color_1: #495057;
-$background-color_2: #bd5d38;
+$background-color_2: #ca4c1a;
 $outline-color_1: #d48a6e;
+
+// Default colours override 
 $primary:  #ce8933;
 
 @import "node_modules/bootstrap/scss/bootstrap.scss";
 
-// Create your own map
+// Create your own map of custom colours. This lets you access them using HTML Classes
 $custom-colors: (
   
 );
 
-// Merge the maps
+// Merge the default and custom maps together 
 $theme-colors: map-merge($theme-colors, $custom-colors);
 
 
-
 /* SideBar Setup */
-/* Offset Contents for SideBar */
-
 #sideNav {
 	padding-left: 1rem;
 	padding-right: 1rem;
@@ -27,9 +26,8 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 	.navbar-nav {
 		.nav-item {
 			.nav-link {
-				font-weight: 100;
+				font-weight: 300;
 				letter-spacing: 0.05rem;
-				text-transform: lowercase;
 			}
 		}
 	}
@@ -43,34 +41,6 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 .form-label {
 	text-align: center;
 	display: block;
-}
-
-.btn-group {
-	display: block;
-	align-items: start;
-	justify-content: start;
-	padding-left: 1rem;
-	padding-right: 1rem;
-	padding-top: 2rem;
-	padding-bottom: 5rem;
-
-}
-
-section.resume-section {
-	display: flex;
-	align-items: start;
-	
-	padding-left: 1rem;
-	padding-right: 1rem;
-	padding-top: 1rem;
-	padding-bottom: 2rem;
-
-    .resume-section-title {
-        font-weight: 700;
-    }
-	.resume-section-content {
-		width: 100%;
-	}
 }
 
 .container {
@@ -98,7 +68,10 @@ body {
     font-size: 2rem;
 }
 
+
+
 @media (min-width: 992px) {
+	/* Offset Contents for SideBar */
 	#sideNav {
 		padding-left: 0;
 		padding-right: 0;
@@ -108,7 +81,7 @@ body {
 		left: 0;
 		display: flex;
 		flex-direction: column;
-		width: 8rem;
+		width: 10rem;
 		height: 100vh;
 		.navbar-brand {
 			display: flex;
@@ -140,13 +113,15 @@ body {
 	}
 	body {
 		padding-top: 0;
-		padding-left: 9rem;
+		padding-left: 10rem;
 	}
-	section.resume-section {
+	
+	.content {
 		padding-left: 3rem;
 		padding-right: 3rem;
 		padding-top: 2rem;
 		padding-bottom: 5rem;
+		
 	}
 
 	.container-lg {
@@ -162,67 +137,30 @@ body {
 		max-width: 960px;
 	}
 }
-@media (min-width: 768px) {
-	section.resume-section {
-		min-height: 100vh;
-	}
-	.container-md {
-		max-width: 720px;
-	}
-	.container-sm {
-		max-width: 720px;
-	}
-	.container {
-		max-width: 720px;
+
+@media (max-width: 992px) {
+	body {
+		padding-top: 4rem;
+		padding-left: 1rem;
+		padding-right: 1rem;
 	}
 }
-@media (min-width: 576px) {
-	.container-sm {
-		max-width: 540px;
-	}
-	.container {
-		max-width: 540px;
-	}
-}
-@media (min-width: 1200px) {
-	.container-xl {
-		max-width: 1140px;
-	}
-	.container-lg {
-		max-width: 1140px;
-	}
-	.container-md {
-		max-width: 1140px;
-	}
-	.container-sm {
-		max-width: 1140px;
-	}
-	.container {
-		max-width: 1140px;
-	}
-}
-@media (min-width: 1400px) {
-	.container-xxl {
-		max-width: 1320px;
-	}
-	.container-xl {
-		max-width: 1320px;
-	}
-	.container-lg {
-		max-width: 1320px;
-	}
-	.container-md {
-		max-width: 1320px;
-	}
-	.container-sm {
-		max-width: 1320px;
-	}
-	.container {
-		max-width: 1320px;
-	}
-}
+
+
+
 
 input:invalid {
 	border: 2px dashed red;
 	border-radius: 5;
   }
+
+@media (min-height: 30rem) {
+	@media (min-width: 992px) {
+	#introduction {
+		height: 100vh; 
+		display: flex;
+		align-items: center;
+		padding-top: 5rem;
+		}
+}
+}
